--- a/style.css
+++ b/style.css
@@ -128,6 +128,31 @@ h1 {
   /* left: 50%; */
   /* transform: translateX(-50%); */
   margin: 22px 0;
+
+  display: flex;
+  flex-flow: column;
+  gap: 8px;
+  align-items: center;
+}
+
+#waitlist-btn {
+  color: var(--color-primary);
+  font-weight: bold;
+  font-size: 24px;
+  text-decoration: none;
+  padding: 12px;
+}
+#waitlist-btn:hover {
+  animation: pulse 0.5s infinite alternate;
+}
+
+@keyframes pulse {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0.8;
+  }
 }
 
 @keyframes pan {
